k8s/mongodb.yaml
# MongoDB Service
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
---
# MongoDB Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
spec:
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongo
        image: mongo:8.0
        args: ["--quiet"]
