k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: phobos-auth-service
spec:
  selector:
    app: phobos-auth
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
