k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phobos-auth-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
        - path: /auth
          pathType: Prefix
          backend:
            service:
              name: phobos-auth-service
              port:
                number: 80
